Archive2/13/1dd080cc4312b8/output
main.cpp: In function 'constexpr double f()':
main.cpp:6:35: error: call to non-constexpr function 'double pow(double, double)'
         return std::pow( 2.0, 2.0 ) ;
                                   ^
main.cpp: In function 'int main()':
main.cpp:11:32: error: 'constexpr double f()' called in a constant expression
         constexpr double x = f() ;
                                ^
